<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Settings -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="1.5dip"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#202020"
        android:tag="configure block" >

        <Button
            android:id="@+id/open_device"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_pattern"
            android:text="@string/open" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/baudRate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/baud_rate_str"
                android:textColor="#ffffff" />

            <Spinner
                android:id="@+id/baudRateValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stopBit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/stop_bit"
                android:textColor="#ffffff" >
            </TextView>

            <Spinner
                android:id="@+id/stopBitValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dataBit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/data_bit"
                android:textColor="#ffffff" >
            </TextView>

            <Spinner
                android:id="@+id/dataBitValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/parity"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/parity_str"
                android:textColor="#ffffff" >
            </TextView>

            <Spinner
                android:id="@+id/parityValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/flowControl"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/flow"
                android:textColor="#ffffff" >
            </TextView>

            <Spinner
                android:id="@+id/flowControlValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/configButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_pattern"
                android:gravity="center"
                android:scaleType="centerInside"
                android:text="@string/config" />
        </LinearLayout>
    </LinearLayout>

    <!-- Read byte -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="1.5dip"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#202020"
        android:tag="Read block" >

        <TextView
            android:id="@+id/ReadBytes"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/read_bytes"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ReadValues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#0877A6"
            android:focusableInTouchMode="false"
            android:gravity="left|top" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:background="@drawable/button_pattern"
            android:gravity="center"
            android:scaleType="centerInside"
            android:text="@string/clear" />
    </LinearLayout>

    <!-- Write byte -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dip"
        android:layout_weight="1"
        android:background="#202020"
        android:tag="Write block" >

        <TextView
            android:id="@+id/WriteBytes"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/write_bytes"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/WriteValues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#0877A6"
            android:editable="true"
            android:gravity="left|center"
            android:hint=""
            android:maxLength="255" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:tag="configure block" >

            <Button
                android:id="@+id/WriteButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_pattern"
                android:gravity="center"
                android:scaleType="centerInside"
                android:text="@string/write" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="显示当前数据"
            />
        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="ddddd"
            android:textColor="#00ff00"
            />
    </LinearLayout>
</LinearLayout>